# prompt-guard

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  fly.toml  pyproject.toml
.claude/: .broken_arrow  manifest.yaml  migration_plan.md  session_state.md
.claude/artifacts/: 000_user_journeys_v1.md  000_user_journeys_v2.md  001_solution_envelope_v1.md  001_solution_envelope_v2.md  002_spec_v1.md  002_spec_v2.md  003_tasklist_v1.md  003_tasklist_v2.md  004_rules_v1.yaml  005_quality_gates_v1.md
.claude/evidence/: T001_T002_T003_quality_gates.json  T006_T012_quality_gates.json  T006_T012_test_report.json  T015_T021_quality_gates.json  caf_compliance_report.md  deep_verify_report.md  quality_gates_run.json  quality_gates_v2_report.json  test_report.json
.claude/evolution/: decisions.md  evolution.md
.claude/remediation/: remediation_tasks.md  verify_deep_2026-02-27_remediation.md  verify_deep_YYYY-MM-DD.md
.github/: DEPLOY_CHECKLIST.md
config/: default.yaml
src/: __init__.py  cli.py  client.py
tests/: conftest.py  test_adapters.py  test_api_health_stats.py  test_api_integration.py  test_attack_vectors.py  test_auth_middleware.py  test_cli.py  test_client.py  test_coverage_gaps.py  test_determinism.py  test_engine_characterisation.py  test_engine_scoring.py  test_middleware_integration.py  test_ml_detector.py  test_ml_detector_integration.py  test_ports.py  test_rate_limit.py  test_request_id.py  test_request_logging.py  test_sanitiser.py  test_sanitiser_characterisation.py  test_security_headers.py
(+57 files in other folders)
