[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-guard"
version = "0.1.0"
description = "Adversarial-grade prompt injection, sanitisation & poisoning protection middleware"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "tiktoken>=0.5.0",
    "xxhash>=3.4.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "regex>=2023.10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = [
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
]
training = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "optimum[onnxruntime]>=1.15.0",
    "accelerate>=0.25.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
prompt-guard = "prompt_guard.cli:main"
